--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       I knew you’d say yes 💕<br>
       You make my world brighter every single day 🥰.<br>
       Every second with you makes me Happier and Healthier 💖.<br>
-      I want to be with YOU till the end 💗.
+      I want to be with YOU Forever💗.
     </p>
 
     <audio id="loveSong" preload="auto">
@@ -259,3 +259,4 @@
 
 </body>
 </html>
+
